main/blue-green-elb-ingress.yml
# Annotations Reference:  https://kubernetes-sigs.github.io/aws-alb-ingress-controller/guide/ingress/annotation/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flaskapp-service
  labels:
    app: flask-app
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  # annotations:
  #   # Ingress Core Settings
  #   kubernetes.io/ingress.class: alb
  #   alb.ingress.kubernetes.io/scheme: internet-facing
  #   alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: nginx
  rules:
    - host: blue.akhilmovva.live
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: blue-flask-service
              port:
                number: 80
    - host: green.akhilmovva.live
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: green-flask-service
              port:
                number: 80
    - host: main.akhilmovva.live
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: blue-flask-service
              port:
                number: 80
